# SimpleGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_vs2022.bat  install_vcpkg_packages.bat  renderDoc.cap  vs-chromium-project.txt
doc/: Modules Diagram.odg
examples/Test101/: .gitignore  compile_shaders.bat
examples/Test101/Assets/Mesh/: box.blend  box.mtl  test.blend  test.mtl
examples/Test101/Assets/Shaders/: imgui.shader  line.shader  terrain.shader  test.hlsl  test.shader
examples/Test101/Assets/Textures/: uvChecker_BC1.dds  uvChecker_BC2.dds  uvChecker_BC3.dds  uvChecker_BC7.dds
src/core/: CMakeLists.txt
src/core/src/: sge_core-config.h  sge_core.h
src/core/src/sge_core/: sge_core-pch.h
src/core/src/sge_core/allocator/: LinearAllocator.cpp  LinearAllocator.h
src/core/src/sge_core/app/: AppBase.cpp  AppBase.h  ConsoleApp.h  ProjectSettings.cpp  ProjectSettings.h
src/core/src/sge_core/base/: BinDeserializer.h  BinSerializer.h  BitUtil.h  ByteOrder.h  Error.cpp  Error.h  Object.cpp  Object.h  Reflection.cpp  Reflection.h  UnitTest.cpp  UnitTest.h  sge_base.h  sge_macro.h
src/core/src/sge_core/detect_platform/: sge_detect_compiler_gcc.h  sge_detect_compiler_vc.h  sge_detect_platform.h
src/core/src/sge_core/file/: Directory.cpp  Directory.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FileStream.cpp  FileStream.h  MemMapFile.cpp  MemMapFile.h
src/core/src/sge_core/graph/: Color.h  ColorUtil.h
src/core/src/sge_core/input/: UIEvent.h
src/core/src/sge_core/log/: Log.cpp  Log.h
src/core/src/sge_core/math/: BBox3.h  Frustum3.cpp  Frustum3.h  Mat4.cpp  Mat4.h  Mat4_Basic.h  Mat4_SSE.h  Math.h  MathCamera3.cpp  MathCamera3.h  MathGeometry.cpp  MathGeometry.h  Quat4.cpp  Quat4.h  Ray3.cpp  Ray3.h  Rect2.h  Tuple2.h  Tuple3.h  Tuple4.h  Vec2.cpp  Vec2.h  Vec2_Basic.h  Vec2_SSE.h  Vec3.cpp  Vec3.h  Vec3_Basic.h  Vec3_SSE.h  Vec4.cpp  Vec4.h  Vec4_Basic.h  Vec4_SSE.h
src/core/src/sge_core/native_ui/: NativeUI.cpp  NativeUI.h
src/core/src/sge_core/native_ui/base/: NativeUIApp_Base.cpp  NativeUIApp_Base.h  NativeUIWindow_Base.cpp  NativeUIWindow_Base.h
src/core/src/sge_core/native_ui/win32/: NativeUIApp_Win32.cpp  NativeUIApp_Win32.h  NativeUIWindow_Win32.cpp  NativeUIWindow_Win32.h  Win32Util.h
src/core/src/sge_core/net/: Poll.h  SockAddr.cpp  SockAddr.h  Socket.cpp  Socket.h
src/core/src/sge_core/pointer/: ComPtr.h  SPtr.h
src/core/src/sge_core/serializer/binary/: BinDeserializer.h  BinSerializer.h
src/core/src/sge_core/serializer/json/: Json.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.h  JsonUtil.h
src/core/src/sge_core/string/: Fmt.h  Lexer.cpp  Lexer.h  String.cpp  String.h  StringUtil.cpp  StringUtil.h  UtfUtil.h
src/core/test/: CMakeLists.txt
src/core/test/src/: main.cpp  sge_core_test.cpp
src/core/test/src/base/: test_BinSerializer.cpp
src/core/test/src/file/: test_MemMapFile.cpp  test_MemMapFile.cpp_sample.txt
src/core/test/src/math/: test_Mat4.cpp  test_Quat4.cpp  test_Vec2.cpp  test_Vec3.cpp  test_Vec4.cpp
src/core/test/src/net/: test_Socket.cpp
src/core/test/src/string/: test_Fmt.cpp  test_String.cpp  test_UtfUtil.cpp  test_UtfUtil.cpp_sample.txt
src/editor/: CMakeLists.txt
src/editor/app/: CMakeLists.txt
src/editor/app/src/: main.cpp  sge_editor_app-pch.h  sge_editor_app.cpp
src/editor/src/: sge_editor-pch.h  sge_editor.h
src/editor/src/sge_editor/: EditorContext.cpp  EditorContext.h  EditorHierarchyWindow.cpp  EditorHierarchyWindow.h  EditorInspectorWindow.cpp  EditorInspectorWindow.h  EditorPropertyDrawer.cpp  EditorPropertyDrawer.h  EditorUI.h  EditorWindow.h  EntitySelection.cpp  EntitySelection.h
src/engine/: CMakeLists.txt
src/engine/src/: sge_engine.h
src/engine/src/sge_engine/: EngineContext.cpp  EngineContext.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/engine/src/sge_engine/assets/: Asset.h  MeshAsset.cpp  MeshAsset.h
src/engine/src/sge_engine/components/: CMeashRenderer.h  CMeshRenderer.cpp  CMeshRenderer.h  CRenderer.cpp  CRenderer.h  CRendererSystem.cpp  CRendererSystem.h  CSystemBase.h  CTransform.cpp  CTransform.h  Component.cpp  Component.h
src/render/: CMakeLists.txt
src/render/shader_compiler/: CMakeLists.txt
src/render/shader_compiler/src/: ShaderCompiler_DX11.cpp  ShaderCompiler_DX11.h  ShaderParser.cpp  ShaderParser.h  sge_shader_compiler-pch.h  sge_shader_compiler.cpp
src/render/src/: sge_render-config.h  sge_render.h
src/render/src/sge_render/: ImGui_SGE.cpp  ImGui_SGE.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderDataType.h  RenderDrawCall.h  Render_Common.h  Renderer.cpp  Renderer.h  sge_render-config.h  sge_render-pch.h
src/render/src/sge_render/backend/dx11/: Material_DX11.cpp  Material_DX11.h  RenderContext_DX11.cpp  RenderContext_DX11.h  RenderGpuBuffer_DX11.cpp  RenderGpuBuffer_DX11.h  Render_DX11_Common.cpp  Render_DX11_Common.h  Renderer_DX11.cpp  Renderer_DX11.h  Shader_DX11.cpp  Shader_DX11.h  Texture_DX11.cpp  Texture_DX11.h
src/render/src/sge_render/buffer/: RenderGpuBuffer.cpp  RenderGpuBuffer.h
src/render/src/sge_render/command/: RenderCommand.cpp  RenderCommand.h  RenderRequest.cpp  RenderRequest.h
src/render/src/sge_render/mesh/: EditMesh.cpp  EditMesh.h  RenderMesh.cpp  RenderMesh.h  RenderTerrain.cpp  RenderTerrain.h  WavefrontObjLoader.cpp  WavefrontObjLoader.h
src/render/src/sge_render/shader/: Material.cpp  Material.h  RenderState.h  Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h
src/render/src/sge_render/textures/: Image.cpp  Image.h  ImageIO.dds.cpp  ImageIO.dds.h  ImageIO_png.cpp  ImageIO_png.h  Texture.cpp  Texture.h
src/render/src/sge_render/vertex/: Vertex.cpp  Vertex.h  VertexLayoutManager.cpp  VertexLayoutManager.h
